--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
   <div class="wrapper">
-
+    <h1>Welcome to Riyadh</h1>
     <!-- HEADER -->
+    <h2>Where a traditional past meets a modern future.</h2>
     <!-- SUB HEAD -->
 
     <div id="content">
-
+      <img src="images/transportation/transit.jpg" alt="Modern Transit">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-        
+        <h4>Travel</h4>
     </div>
   </div>
 </body>
