--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- HEADER -->
     <h2>Where a traditional past meets a modern future.</h2>
     <!-- SUB HEAD -->
-  
+
     <div id="content">
-      <img src="../images/transit.jpg" alt="Modern Transit">
+      <img src="images/transit.jpg" alt="Modern Transit">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         <h4>Travel</h4>
         <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.
